# mcp_f1

./: .gitignore  HOW_TO_USE.md  MCP_SETUP_GUIDE.md  README.md  fastf1_exploration.ipynb  test_server.py
dev_notebooks/: 2021_tyre_aggregation.ipynb  2025_tyre_aggregation.ipynb  fastf1_exploration.ipynb  lap_comparison_visualizer.ipynb  mini_sector_extraction.ipynb
mcp_f1/: README.md  pyproject.toml
mcp_f1/server/: __init__.py  __main__.py
mcp_f1/server/tools/: __init__.py  analysis.py
mcp_f1/server/utils/: __init__.py  cache.py
